# IPCone

./: readme.md
IPCone/: Buffer.cpp  Buffer.h  CMakeLists.txt  Deserilizer.cpp  Deserilizer.h  Message.cpp  Message.h  MessageBuilder.cpp  MessageBuilder.h  ObjectPool.cpp  ObjectPool.h  OperatorResolver.cpp  OperatorResolver.h  Receiver.cpp  Receiver.h  Request.cpp  Request.h  ResponceHandler.cpp  ResponceHandler.h  Sender.cpp  Sender.h  Serilizer.cpp  Serilizer.h  client.cpp  protocol.h  server.cpp
IPCone/Examples/: Cinema.cpp  Cinema.h  ExampleFunctions.cpp  ExampleFunctions.h  Movie.cpp  Movie.h
